Channel Sedule Summery rEPORT Signed-off-by: Dushan Maduranga <Dushan Maduranga>

--- a/src/main/webapp/resources/css/css1.css
+++ b/src/main/webapp/resources/css/css1.css
@@ -36,6 +36,11 @@ root {
     text-align: right;
     padding: 5px;
 }
+.numberColS {
+    width: 50px;
+    text-align: right;
+    padding: 2px;
+}
 
 .textCol {
     text-align: left;
